Update API URL to new backend service

--- a/index.html
+++ b/index.html
@@ -3570,7 +3570,7 @@
     </div>
 
     <script>
-        const API_URL = 'https://statement-parser-backend-yg0a.onrender.com';
+        const API_URL = 'https://statement-scan-api.onrender.com';
 
         let accounts = [];
         let portfolioData = null;
