Fix duplicate % sign in allocation tab button

--- a/index.html
+++ b/index.html
@@ -6950,7 +6950,7 @@
                                 <circle cx="5" cy="19" r="2"/>
                                 <line x1="5" y1="5" x2="19" y2="19"/>
                             </svg>
-                            % Allocation
+                            Allocation
                         </button>
                     </div>
 
