Add margin-top to market indicators for better spacing

--- a/index.html
+++ b/index.html
@@ -6364,6 +6364,7 @@
             padding: 16px 24px;
             background: var(--bg-primary);
             border-radius: var(--radius-lg);
+            margin-top: 32px;
             margin-bottom: 24px;
             overflow-x: auto;
         }
