--- a/index.html
+++ b/index.html
@@ -11512,7 +11512,7 @@
                 <script>
                     // Redirect to app.html when dashboard is accessed on landing
                     if (window.location.hash === '#dashboard' || document.getElementById('dashboard').style.display === 'block') {
-                        window.location.href = '/app.html';
+                        window.location.href = '/app';
                     }
                 </script>
             </div>
@@ -13968,11 +13968,11 @@
                 });
 
                 // Redirect to app page
-                window.location.href = '/app.html';
+                window.location.href = '/app';
             } catch (e) {
                 console.error('Error storing files for transfer:', e);
                 // Fall back to redirecting anyway - app will show empty state
-                window.location.href = '/app.html';
+                window.location.href = '/app';
             }
         }
 
@@ -15927,7 +15927,7 @@
                 hideAuthModal();
                 updateAuthUI();
                 // Redirect to app after successful login
-                window.location.href = '/app.html';
+                window.location.href = '/app';
             } catch (err) {
                 errorEl.textContent = 'Connection error. Please try again.';
                 errorEl.style.display = 'block';
@@ -15962,7 +15962,7 @@
                 hideAuthModal();
                 updateAuthUI();
                 // Redirect to app after successful registration
-                window.location.href = '/app.html';
+                window.location.href = '/app';
             } catch (err) {
                 errorEl.textContent = 'Connection error. Please try again.';
                 errorEl.style.display = 'block';
